# api/openapi/openapi.yaml
@@ -4269,4 +4269,19 @@ components:
           items:
             $ref: "#/components/schemas/Collection"
           description: List of collections found
-      required: [images, collections]
+        page:
+          type: integer
+          description: Current page
+        limit:
+          type: integer
+          description: Items per page
+        count:
+          type: integer
+          description: Total count of images found
+        next:
+          type: string
+          description: Next page link
+        prev:
+          type: string
+          description: Previous page link
+      required: [images, collections, page, limit]
